c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/add_void_pointer.c
// no pointer arithmetic with pointers to incomplete type
// (GCC/Clang allow this as an extension)

void *malloc(unsigned long size);

int main(void) {
  void *x = malloc(100);
  x = x + 1;
  return 0;
}